# depa-data-plane-shared-libraries

./: .bazelrc
src/azure/attestation/src/: endorsed_tcb.cc  sev5.cc  sev6.cc
src/azure/encrypt_payload/: encrypt_payload.cc
src/azure/fetch_auth_token/: fetch_auth_token.cc
src/core/curl_client/: http1_curl_wrapper.cc
src/cpio/client_providers/auth_token_provider/azure/: azure_auth_token_provider.cc
src/cpio/client_providers/auth_token_provider/gcp/: gcp_auth_token_provider.cc
src/cpio/client_providers/confidential_space/: BUILD.bazel  confidential_space_token_fetcher.cc  confidential_space_token_fetcher.h
src/cpio/client_providers/interface/: auth_token_provider_interface.h  private_key_fetcher_provider_interface.h
src/cpio/client_providers/kms_client_provider/: BUILD.bazel
src/cpio/client_providers/kms_client_provider/azure/: BUILD.bazel  azure_kms_client_provider.cc  azure_kms_client_provider_utils.cc
src/cpio/client_providers/kms_client_provider/gcp/: BUILD.bazel  gcp_unwrap_kms_client_provider.cc  gcp_unwrap_kms_client_provider.h
src/cpio/client_providers/private_key_client_provider/: BUILD.bazel  private_key_client_provider.cc  private_key_client_provider.h  private_key_client_utils.cc  private_key_client_utils.h
src/cpio/client_providers/private_key_fetcher_provider/: private_key_fetcher_provider.cc
src/cpio/client_providers/private_key_fetcher_provider/azure/: BUILD.bazel  azure_private_key_fetcher_provider.cc
src/cpio/client_providers/private_key_fetcher_provider/gcp/: BUILD.bazel  gcp_private_key_fetcher_provider.cc  gcp_private_key_fetcher_provider.h
src/public/core/interface/: cloud_platform.h
