# Copyright (c) iSPIRT / DEPA.
# Licensed under the Apache License, Version 2.0.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//src:scp_internal_pkg"])

cc_library(
    name = "confidential_space_token_fetcher",
    srcs = ["confidential_space_token_fetcher.cc"],
    hdrs = ["confidential_space_token_fetcher.h"],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@curl",
        "@nlohmann_json//:lib",
    ],
)
