# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//src:scp_internal_pkg"])

# TODO: update this alias to be the actual implementation.
alias(
    name = "azure_skr_sidecar_client_provider",
    actual = "//src/cpio/client_providers/kms_client_provider/gcp:nontee_gcp_kms_client_provider",
)

# iSPIRT/DEPA: self-contained RSA wrapping crypto (key gen / PEM / SHA-256 hash /
# RSA-OAEP unwrap) on BoringSSL. Reused by the GCP Confidential Space unwrap KMS
# client (//src/cpio/client_providers/kms_client_provider/gcp:tee_gcp_unwrap_kms_client_provider).
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "azure_kms_client_provider_utils",
    srcs = ["azure_kms_client_provider_utils.cc"],
    hdrs = ["azure_kms_client_provider_utils.h"],
    deps = [
        "@boringssl//:crypto",
        "@boringssl//:ssl",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
    ],
)
